WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259795
Path::applyElements() should not trigger creation of a platform path for simple segments
https://bugs.webkit.org/show_bug.cgi?id=259795
Summary
Path::applyElements() should not trigger creation of a platform path for simp...
Said Abou-Hallawa
Reported
2023-08-03 13:46:59 PDT
We should allow Path::applyElements() to call PathStream::applyElements(), so we don't trigger CGPath creation for common SVG scenarios.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-08-03 13:48:21 PDT
<
rdar://problem/113355740
>
Said Abou-Hallawa
Comment 2
2023-08-03 14:06:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16360
EWS
Comment 3
2023-08-03 18:41:31 PDT
Committed
266564@main
(c9b0bf147c95): <
https://commits.webkit.org/266564@main
> Reviewed commits have been landed. Closing PR #16360 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug