Source/WebCore/platform/graphics/PathSegment.cpp
@@ -65,10 +65,21 @@ void PathSegment::addToImpl(PathImpl& impl) const
     });
 }
 
-void PathSegment::applyElements(const PathElementApplier& applier) const
+bool PathSegment::canApplyElements() const
 {
-    WTF::switchOn(m_data, [&](auto& data) {
-        data.applyElements(applier);
+    return WTF::switchOn(m_data, [&](auto& data) {
+        return data.canApplyElements;
+    });
+}
+
+bool PathSegment::applyElements(const PathElementApplier& applier) const
+{
+    return WTF::switchOn(m_data, [&](auto& data) -> bool {
+        if constexpr (std::decay_t<decltype(data)>::canApplyElements) {
+            data.applyElements(applier);
+            return true;
+        }
+        return false;
     });
 }
 
