Source/WebCore/platform/graphics/PathStream.h
@@ -68,7 +68,7 @@ public:
     WEBCORE_EXPORT const Vector<PathSegment>& segments() const;
 
     void applySegments(const PathSegmentApplier&) const final;
-    void applyElements(const PathElementApplier&) const final;
+    bool applyElements(const PathElementApplier&) const final;
 
     FloatRect fastBoundingRect() const final;
     FloatRect boundingRect() const final;
